# ohipy

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Makefile  README.md  ROADMAP.md  asv.conf.json  benchmarks.md  discrepancy_report.md  ohi-calculator.js  pyproject.toml
.github/: dependabot.yml  settings.yml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-profile-output.txt  task-2-idempotent.txt  (+9 more)
benchmarks/: BENCHMARKS.md  README.md  benchmark_branches.py  time_run_python_scores.py
comparative/: branch_benchmark_20260310T221208Z.json  branch_benchmark_20260310T221447Z.json  branch_benchmark_20260310T223350Z.json  calculate_scores.r  compare_scores.py  scores_2024_py.csv  scores_2024_r.csv  scores_difference.csv
data/: README.md
infra/: app.py  cdk.json  requirements.txt
js/: index.html  ohi-calculator.js  sample-data.json  sample-data.xlsx
scripts/: benchmark.py  benchmark_branches.py  convert_layers_to_parquet.py  profile_run.py  run_python_scores.py  run_scores_2024.py
tests/: AGENTS.md  README.md  conftest.py  run_all_tests.sh  test_api_parity.py  test_comparison_helper.py  test_dimension_isolation.py  test_dimension_removal_edge_cases.py  test_dimension_removal_parity.py  test_dimension_removal_sensitivity.py  test_edge_cases.py  test_layer_audit.py  test_multi_year.py  test_ohi_year_filtering.py  test_overrides.py  test_parity_full.py  test_parity_scenarios.py  test_pipeline.py  test_pipeline_run_years.py  test_r_parity.py  test_runner_basic.py  test_weight_sensitivity.py
(+474 files in other folders)
